@@ -1067,182 +1067,5 @@ cvs_casecmp (str1, str2)
 
 
 
-/* static char *
- * locate_file_in_dir ( char *dir, char *file )
- *
- * Search a directory for a filename, case insensitively when appropriate.
- *
- * INPUTS
- *
- *  dir		Path to directory to be searched.
- *  file	File name to be located, perhaps case insensitively.
- *
- * RETURNS
- *
- *  A newly malloc'd array containing the full path to the located file
- *  or NULL of the file was not found in dir or if the file found was
- *  not readable.
- *
- * ERRORS
- *
- *  When this function returns NULL, errno will be set appropriately.
- */
-static char *
-locate_file_in_dir ( dir, file )
-    char *dir;
-    char *file;
-{
-    char *retval;
-
-#if defined (SERVER_SUPPORT) && !defined (FILENAMES_CASE_INSENSITIVE)
-    if ( ign_case )
-    {
-	DIR *dirp;
-	struct dirent *dp;
-	char *found_name = NULL;
-
-	if ( ( dirp = CVS_OPENDIR ( dir ) ) == NULL )
-	{
-	    if ( existence_error ( errno ) )
-	    {
-		/* This can happen if we are looking in the Attic and the Attic
-		   directory does not exist.  Pass errno through to the caller;
-		   they know what to do with it.  */
-		return NULL;
-	    }
-	    else
-	    {
-		/* Give a fatal error; that way the error message can be
-		 * more specific than if we returned the error to the caller.
-		 */
-		error ( 1, errno, "cannot read directory %s", dir );
-	    }
-	}
-	errno = 0;
-	while ( ( dp = CVS_READDIR ( dirp ) ) != NULL )
-	{
-	    if ( cvs_casecmp ( dp->d_name, file ) == 0 )
-	    {
-		if ( found_name != NULL )
-		    error ( 1, 0, "%s is ambiguous; could mean %s or %s",
-			    file, dp->d_name, found_name );
-		found_name = xstrdup ( dp->d_name );
-	    }
-	}
-	if ( errno != 0 )
-	    error ( 1, errno, "cannot read directory %s", dir );
-
-	CVS_CLOSEDIR ( dirp );
-
-	if ( found_name == NULL )
-	{
-	    errno = ENOENT;
-	    return NULL;
-	}
-
-	/* Copy the found name back into DIR.  We are assuming that
-	   found_name is the same length as fname, which is true as
-	   long as the above code is just ignoring case and not other
-	   aspects of filename syntax.  */
-	retval = xmalloc ( strlen ( dir )
-			   + strlen ( found_name )
-			   + 2 );
-	sprintf ( retval, "%s/%s", dir, found_name );
-    }
-    else
-#endif /* defined (SERVER_SUPPORT) && !defined (FILENAMES_CASE_INSENSITIVE) */
-    {
-	retval = xmalloc ( strlen ( dir )
-			   + strlen ( file )
-			   + 2 );
-	(void) sprintf ( retval, "%s/%s", dir, file );
-	if ( !isfile ( retval ) )
-	{
-	    free ( retval );
-	    return NULL;
-	}
-    }
-
-    return retval;
-}
-
-
-
-/*
- * char *
- * locate_rcs ( const char* file, const char *repository , int *inattic )
- *
- * Find an RCS file in the repository.  Most parts of CVS will want to
- * rely instead on RCS_parse which calls this function and is
- * called by recurse.c which then puts the result in useful places
- * like the rcs field of struct file_info.
- *
- * INPUTS
- *
- *  repository		the repository (including the directory)
- *  file		the filename within that directory (without RCSEXT).
- *  inattic		NULL or a pointer to the output boolean
- *
- * OUTPUTS
- *
- *  inattic		If this input was non-null, the destination will be
- *  			set to true if the file was found in the attic or
- *  			false if not.  If no RCS file is found, this value
- *  			is undefined.
- *
- * RETURNS
- *
- *  a newly-malloc'd array containing the absolute pathname of the RCS
- *  file that was found or NULL on error.
- *
- * ERRORS
- *
- *  errno will be set by the system calls in the case of failure.
- */
-char *
-locate_rcs ( repository, file, inattic )
-    const char *repository;
-    const char *file;
-    int *inattic;
-{
-    char *rcsfile;
-    char *dir;
-    char *retval;
-
-    /* Allocate space and add the RCS extension */
-    rcsfile = xmalloc ( strlen ( file )
-		    + sizeof ( RCSEXT ) );
-    (void) sprintf ( rcsfile, "%s%s", file, RCSEXT );
-
-    /* Search in the top dir given */
-    if (( retval = locate_file_in_dir ( repository, rcsfile )) != NULL )
-    {
-	if ( inattic )
-	    *inattic = 0;
-	goto out;
-    }
-
-    /* Search in the Attic */
-    dir = xmalloc ( strlen ( repository )
-		    + sizeof ( CVSATTIC )
-		    + 2 );
-    (void) sprintf ( dir,
-		     "%s/%s",
-		     repository,
-		     CVSATTIC );
-
-    if ( ( retval = locate_file_in_dir ( dir, rcsfile ) ) != NULL
-	 && inattic != NULL )
-	*inattic = 1;
-
-    free ( dir );
-
-out:
-    free ( rcsfile );
-    return retval;
-}
-
-
-
 /* vim:tabstop=8:shiftwidth=4
  */
